Mise en ordre + readme

--- a/Cluster first.ipynb
+++ b/Cluster first.ipynb
@@ -72,14 +72,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2022-03-25 13:37:52--  http://vrp.galgos.inf.puc-rio.br/media/com_vrp/instances//X/X-n120-k6.sol\n",
+      "--2022-03-25 13:40:02--  http://vrp.galgos.inf.puc-rio.br/media/com_vrp/instances//X/X-n120-k6.sol\n",
       "Résolution de vrp.galgos.inf.puc-rio.br (vrp.galgos.inf.puc-rio.br)… 139.82.16.196\n",
       "Connexion à vrp.galgos.inf.puc-rio.br (vrp.galgos.inf.puc-rio.br)|139.82.16.196|:80… connecté.\n",
       "requête HTTP transmise, en attente de la réponse… 416 Requested Range Not Satisfiable\n",
       "\n",
       "    Le fichier a déjà été complètement récupéré ; rien à faire.\n",
       "\n",
-      "--2022-03-25 13:37:53--  http://vrp.galgos.inf.puc-rio.br/media/com_vrp/instances//X/X-n120-k6.vrp\n",
+      "--2022-03-25 13:40:03--  http://vrp.galgos.inf.puc-rio.br/media/com_vrp/instances//X/X-n120-k6.vrp\n",
       "Résolution de vrp.galgos.inf.puc-rio.br (vrp.galgos.inf.puc-rio.br)… 139.82.16.196\n",
       "Connexion à vrp.galgos.inf.puc-rio.br (vrp.galgos.inf.puc-rio.br)|139.82.16.196|:80… connecté.\n",
       "requête HTTP transmise, en attente de la réponse… 416 Requested Range Not Satisfiable\n",
@@ -91,8 +91,8 @@
    ],
    "source": [
     "Instance = \"X-n120-k6\"\n",
-    "!wget -c http://vrp.galgos.inf.puc-rio.br/media/com_vrp/instances//X/{Instance}.sol -P instances\n",
-    "!wget -c http://vrp.galgos.inf.puc-rio.br/media/com_vrp/instances//X/{Instance}.vrp -P instances"
+    "!wget -c http://vrp.galgos.inf.puc-rio.br/media/com_vrp/instances//X/{Instance}.sol -P instances/\n",
+    "!wget -c http://vrp.galgos.inf.puc-rio.br/media/com_vrp/instances//X/{Instance}.vrp -P instances/"
    ]
   },
   {
